--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <button id="btn">Нажми меня</button>
+    <div class="wrapper">
+        <button id="btn">Нажми меня</button>
+    </div>
     <button>Нажми меня</button>
     <button>Нажми меня</button>
+
+    <a href="https://youtube.com">https://youtube.com</a>
     
     <script src="js/script.js"></script>
 </body>
