--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Course</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <div class="wrapper">
-        <button id="btn">Нажми меня</button>
-    </div>
-    <button>Нажми меня</button>
-    <button>Нажми меня</button>
+<html lang="ru">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>JavaScript</title>
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<div class="box" id="box"></div>
+		<button>1</button>
+		<button>2</button>
+		<button>3</button>
+		<button>4</button>
+		<button>5</button>
 
-    <a href="https://youtube.com">https://youtube.com</a>
-    
-    <script src="js/script.js"></script>
-</body>
+		<div class="circle"></div>
+		<div class="circle"></div>
+		<div class="circle"></div>
+
+		<div class="wrapper">
+			<div class="heart"></div>
+			<div class="heart"></div>
+            <div class="heart"></div>
+            
+		</div>
+
+		<script src="js/script.js"></script>
+	</body>
 </html>
